--- a/transparency-2024.Rmd
+++ b/transparency-2024.Rmd
@@ -24,6 +24,10 @@ df <- df %>%
   mutate(
     totalrequested=sum(amount),
     org=str_wrap(org,40)
+  ) %>%
+  ungroup() %>%
+  mutate(
+    org=factor(org,levels=rev(unique(org)),ordered=T)
   )
 
 style <- function(p,dist=200,dollars=T) {
@@ -31,15 +35,14 @@ style <- function(p,dist=200,dollars=T) {
     xlab("") +
     ylab("") +
     coord_flip() +
-    theme_classic() +
+    theme_classic(base_family = "serif") +
     theme(
       axis.line.y=element_blank(),
       axis.ticks.y=element_blank(),
       axis.line.x=element_blank(),
       axis.ticks.x=element_blank(),
       panel.grid.major.x=element_line(color="gray80"),
-      plot.margin=unit(c(0,0,0,0), "pt"),
-      text = element_text(family = "Georgia")
+      plot.margin=unit(c(10,10,10,10), "pt")
     )
   
   if (dollars) {
@@ -61,55 +64,55 @@ In Fall 2024, HSG Finance Committee met `r nrow(hours)` times for a total of `r 
 There were two rounds of allocations:
 
 * Main allocations: \$16,090
-* Special allocations: \$2,500
+* Special allocations*: \$2,500
 
 HSG funded `r sum(summarize(group_by(df,org),n=mean(nevents
-))["n"])` events across `r nrow(summarize(group_by(df,org),n=n()))` HSOs. HSOs requested a total of \$`r floor(sum(df$amount,na.rm=T)/1000)`,000; the overall budget for Fall 2024 was \$18,590.
+))["n"])` planned events across `r nrow(summarize(group_by(df,org),n=n()))` HSOs. HSOs requested a total of \$`r floor(sum(df$amount,na.rm=T)/1000)`,000; the overall budget for Fall 2024 was \$18,590.
 
-Special allocations were released due to the HSG Executive Board decision to replace the annual spring Harris Gala with a less costly celebration. Historically, the Harris Gala cost over \$30,000 annually. 
+\* The HSG Executive Board voted to replace the annual spring Harris Gala with a less costly celebration. Historically, the Harris Gala cost over \$30,000. This release of funds allowed the Finance Committee to hold special allocations in mid-quarter. 
 
 ## Allocations by Organization
 
-The minimum amount received by any HSO was \$`r min(summarize(group_by(df,org),amount)["amount"],na.rm=T)` and the maximum was \$`r max(summarize(group_by(df,org),amount)["amount"],na.rm=T)`.
+The minimum amount received by any HSO was \$`r min(summarize(group_by(df,org),totalreceived)["totalreceived"],na.rm=T)` and the maximum was \$`r max(summarize(group_by(df,org),totalreceived)["totalreceived"],na.rm=T)`.
 
-```{r, fig.height = 6}
+```{r, fig.height = 5}
 p <- df %>%
   group_by(org) %>%
   summarize(total=mean(totalreceived)) %>%
   ggplot(aes(org,total)) +
   geom_bar(stat="identity",show.legend=F,fill="#800000") +
   labs(
-    title="Allocations by Organization, Fall 2024",
-    subtitle="Dotted line represents mean amount allocated"
+    title="    Allocations by Organization, Fall 2024",
+    subtitle="     Dotted line represents average allocation"
   ) +
   geom_hline(
-    yintercept=mean(df$totalreceived),
+    yintercept=mean(summarize(group_by(df,org),m=mean(totalreceived,na.rm=T))[["m"]],na.rm=T),
     linetype="dotted",
-    size=.8
+    size=.6
   )
 
 style(p)
 ```
 
-```{r, fig.height = 6}
+```{r, fig.height = 5}
 p <- df %>%
   group_by(org) %>%
   summarize(total=mean(nevents)) %>%
   ggplot(aes(org,total)) +
   geom_bar(stat="identity",show.legend=F,fill="#800000") +
-  labs(title="Number of Events Held by Organization, Fall 2024")
+  labs(title="    Number of Events Planned by Organization, Fall 2024")
 
 style(p,dollars=F) +
   scale_y_continuous(breaks=seq(0,20,2))
 ```
 
-```{r, fig.height = 6}
+```{r, fig.height = 5}
 p <- df %>%
   group_by(org) %>%
   summarize(rollover=mean(totalrollover)) %>%
   ggplot(aes(org,rollover)) +
   geom_bar(stat="identity",show.legend=F,fill="#800000") +
-  labs(title="Total Rollover/External Funds by Organization, Fall 2024")
+  labs(title="    Total Rollover/External Funds by Organization,\n    Fall 2024")
   
 style(p,2000)
 ```
@@ -120,85 +123,92 @@ We allocated funds on an organizational level, not on an item-by-item basis. The
 
 Notation:
 
+* **Social**: e.g., retreats, happy hours, mixers, study hours, and alumni events
+* **Speaker**: e.g., presentations, lunch & learns, and panels, usually about policy topics
 * **Community engagement**: e.g., volunteering and off-campus events
-* **Promotion**: e.g., graphic design and recruitment activities.
+* **Promotion**: e.g., graphic design, and recruitment activities
+* **Workshop**: e.g., career fairs and writing workshops
 
-```{r}
+```{r, fig.height = 3}
 p <- df %>%
   group_by(org,category) %>%
   summarize(
     # scale the amount requested by total received + 20% of total rollover
-    adjusted=sum(amount)/mean(totalrequested)*(max(totalreceived)+.2*max(totalrollover))
+    adjusted=sum(amount,na.rm=T)/mean(totalrequested,na.rm=T)*(max(totalreceived,na.rm=T)+.2*max(totalrollover,na.rm=T))
   ) %>%
   group_by(category) %>%
-  summarize(adjusted=round(sum(adjusted))) %>%
+  summarize(adjusted=round(sum(adjusted,na.rm=T))) %>%
   filter(!is.na(adjusted)) %>%
   mutate(
     category=fct_reorder(str_to_sentence(category), adjusted)
   ) %>%
   ggplot(aes(category,adjusted)) +
   geom_bar(stat="identity",show.legend=F,fill="#800000") +
-  labs(title="Allocations by Event Type, Fall 2024",
-       subtitle="Estimated from amount requested per category")
+  labs(title="   Allocations by Event Type, Fall 2024",
+       subtitle="    Estimated from amount requested per category")
 
 style(p,dist=1000)
 ```
 
 ## Allocations by Item Type
 
+See previous section for a description of how these items were calculated.
+
 Notation:
 
-* **Services**: e.g.,  bartending, event rental, transportation, event tickets, and food delivery
-* *Gifts**: e.g.,  speaker honorariums, promotional merchandise, and raffle prizes
+* **Services**: e.g.,  bartending, space rental, transportation, event tickets, and food delivery
+* **Gifts**: e.g.,  speaker honorariums, promotional merchandise, and raffle prizes
 * **Reusable supplies**: e.g., board games and decorations
 * **Non-reusable supplies**: e.g., utensils and firewood
 
-```{r}
+```{r, fig.height = 3}
 p <- df %>%
   group_by(org,type) %>%
   summarize(
     # scale the amount requested by 
-    adjusted=sum(amount)/mean(totalrequested)*mean(totalreceived)
+    adjusted=sum(amount,na.rm=T)/mean(totalrequested,na.rm=T)*mean(totalreceived,na.rm=T)
   ) %>%
   group_by(type) %>%
-  summarize(adjusted=round(sum(adjusted))) %>%
-  filter(!is.na(adjusted)) %>%
+  summarize(adjusted=round(sum(adjusted,na.rm=T))) %>%
+  filter(!is.na(adjusted),type!="") %>%
   mutate(
     type=fct_reorder(str_to_sentence(type), adjusted)
   ) %>%
   ggplot(aes(type,adjusted)) +
   geom_bar(stat="identity",show.legend=F,fill="#800000") +
-  labs(title="Allocations by Item Type, Fall 2024",
-       subtitle="Estimated from amount requested per item type")
+  labs(title="   Allocations by Item Type, Fall 2024",
+       subtitle="    Estimated from amount requested per item type")
 
 style(p,dist=1000)
 ```
 
 ## Survey
 
-**We need your voice** to determine what types of events we, as the Harris student body, want to fund next quarter. Please fill the following 1-minute form to let us know your opinion.
+**We need your voice** to determine what types of events we, as the Harris student body, want to fund next quarter. Please fill the following [1-minute form](https://forms.gle/Jq5z4rwTVAKWb9re8) to let us know your opinion.
 
 ## Future improvements
 
-Improvements for next quarter: (use slides)
+Improvements for next quarter:
 
 * **Expedite funding timelines**
   * HSOs reported unusually slow funding timelines, due to institutional knowledge loss from last year's government. Next quarter, HSOs can expect to receive funding by Week 1.
 * **Increase funding transparency**
   * HSOs reported being unclear on what criteria were being used to fund activities. For the Winter 2025 cycle, we released a new [budgeting template]() and new [funding criteria]() to address these issues.
-  
+
+<br /><br />
+
 Sincerely,
 
 Tony Jiang, Finance Committee Chair
 
 Karen Yi, Finance Committee Member
 
-Andrea , Finance Committee Member
+Andrea Kimpson, Finance Committee Member
 
 Shivani Patel, Finance Committee Member
 
-Faris, Finance Committee Member
+Faris Alrakhis, Finance Committee Member
 
-Moe, Finance Committee Member
+Moe Alsharif, Finance Committee Member
 
 Tiffany Tu, Finance Committee Member
