--- a/transparency-2024.Rmd
+++ b/transparency-2024.Rmd
@@ -6,6 +6,7 @@ output:
 mainfont: Georgia
 sansfont: Arial
 fontsize: 16pt
+urlcolor: blue
 ---
 
 ```{r setup, include=FALSE}
@@ -23,7 +24,7 @@ df <- df %>%
   group_by(org) %>%
   mutate(
     totalrequested=sum(amount),
-    org=str_wrap(org,40)
+    org=str_wrap(org,60)
   ) %>%
   ungroup() %>%
   mutate(
@@ -69,13 +70,13 @@ There were two rounds of allocations:
 HSG funded `r sum(summarize(group_by(df,org),n=mean(nevents
 ))["n"])` planned events across `r nrow(summarize(group_by(df,org),n=n()))` HSOs. HSOs requested a total of \$`r floor(sum(df$amount,na.rm=T)/1000)`,000; the overall budget for Fall 2024 was \$18,590.
 
-\* The HSG Executive Board voted to replace the annual spring Harris Gala with a less costly celebration. Historically, the Harris Gala cost over \$30,000. This release of funds allowed the Finance Committee to hold special allocations in mid-quarter. 
+\* *The HSG Executive Board voted to replace the annual spring Harris Gala with a less costly celebration. Historically, the Harris Gala cost over \$30,000. This release of funds allowed the Finance Committee to hold special allocations in mid-quarter.* 
 
 ## Allocations by Organization
 
 The minimum amount received by any HSO was \$`r min(summarize(group_by(df,org),totalreceived)["totalreceived"],na.rm=T)` and the maximum was \$`r max(summarize(group_by(df,org),totalreceived)["totalreceived"],na.rm=T)`.
 
-```{r, fig.height = 5}
+```{r, fig.height = 6}
 p <- df %>%
   group_by(org) %>%
   summarize(total=mean(totalreceived)) %>%
@@ -94,25 +95,25 @@ p <- df %>%
 style(p)
 ```
 
-```{r, fig.height = 5}
+```{r, fig.height = 6}
 p <- df %>%
   group_by(org) %>%
   summarize(total=mean(nevents)) %>%
   ggplot(aes(org,total)) +
   geom_bar(stat="identity",show.legend=F,fill="#800000") +
-  labs(title="    Number of Events Planned by Organization, Fall 2024")
+  labs(title="    Number of Events Planned\n    by Organization, Fall 2024")
 
 style(p,dollars=F) +
   scale_y_continuous(breaks=seq(0,20,2))
 ```
 
-```{r, fig.height = 5}
+```{r, fig.height = 6}
 p <- df %>%
   group_by(org) %>%
   summarize(rollover=mean(totalrollover)) %>%
   ggplot(aes(org,rollover)) +
   geom_bar(stat="identity",show.legend=F,fill="#800000") +
-  labs(title="    Total Rollover/External Funds by Organization,\n    Fall 2024")
+  labs(title="    Total Rollover/External Funds by\n    Organization, Fall 2024")
   
 style(p,2000)
 ```
@@ -138,7 +139,7 @@ p <- df %>%
   ) %>%
   group_by(category) %>%
   summarize(adjusted=round(sum(adjusted,na.rm=T))) %>%
-  filter(!is.na(adjusted)) %>%
+  filter(!is.na(adjusted),category!="") %>%
   mutate(
     category=fct_reorder(str_to_sentence(category), adjusted)
   ) %>%
@@ -184,7 +185,7 @@ style(p,dist=1000)
 
 ## Survey
 
-**We need your voice** to determine what types of events we, as the Harris student body, want to fund next quarter. Please fill the following [1-minute form](https://forms.gle/Jq5z4rwTVAKWb9re8) to let us know your opinion.
+**We need your voice** to determine what types of events we, as the Harris student body, want to fund next quarter. Please fill the following <span style="text-decoration:underline">[1-minute form](https://forms.gle/Jq5z4rwTVAKWb9re8)</span> to let us know your opinion.
 
 ## Future improvements
 
@@ -193,9 +194,9 @@ Improvements for next quarter:
 * **Expedite funding timelines**
   * HSOs reported unusually slow funding timelines, due to institutional knowledge loss from last year's government. Next quarter, HSOs can expect to receive funding by Week 1.
 * **Increase funding transparency**
-  * HSOs reported being unclear on what criteria were being used to fund activities. For the Winter 2025 cycle, we released a new [budgeting template]() and new [funding criteria]() to address these issues.
+  * HSOs reported being unclear on what criteria were being used to fund activities. For the Winter 2025 cycle, we released a new <span style="text-decoration:underline">[budgeting template](https://docs.google.com/spreadsheets/d/1frBcdAxVfhK3QXdHX1ozkQUmYlt2pTsr/edit?rtpof=true&gid=1695333964#gid=1695333964)</span> and new <span style="text-decoration:underline">[funding criteria](https://docs.google.com/spreadsheets/d/1uyt3Tjdp7T0ieYMFBzvp8Yh_i8PVPX5L/edit?gid=1230391486#gid=1230391486)</span> to address these issues.
 
-<br /><br />
+\vspace{12pt}
 
 Sincerely,
 
