--- a/transparency-2024.Rmd
+++ b/transparency-2024.Rmd
@@ -102,26 +102,51 @@ style(p)
 ```
 
 ```{r, fig.height = 6}
+rollover <- df %>%
+  group_by(org) %>%
+  summarize(rollover=mean(totalrollover))
+  
+style(p,2000)
 p <- df %>%
   group_by(org) %>%
-  summarize(total=mean(nevents)) %>%
-  ggplot(aes(org,total)) +
-  geom_bar(stat="identity",show.legend=F,fill="#800000") +
-  labs(title="   Number of Events Planned\n   by Organization, Fall 2024")
+  summarize(total=mean(totalreceived)) %>%
+  ggplot() +
+  geom_bar(aes(org,total),
+           stat="identity",show.legend=F,fill="#800000") +
+  geom_segment(aes(x = org, xend = org, y = 0, yend = rollover$rollover)) +
+  geom_point(aes(org,rollover$rollover)) +
+  labs(
+    title="   Allocations Compared to Rollover/\n   External Funding by Organization,\n   Fall 2024",
+    subtitle="   Points represent rollover/external amount"
+  ) +
+  geom_hline(
+    yintercept=mean(summarize(group_by(df,org),m=mean(totalreceived,na.rm=T))[["m"]],na.rm=T),
+    linetype="dotted",
+    size=.6
+  )
 
-style(p,dollars=F) +
-  scale_y_continuous(breaks=seq(0,20,2))
+style(p,dist=2000)
 ```
 
 ```{r, fig.height = 6}
+nevents <- df %>%
+  group_by(org) %>%
+  summarize(total=mean(nevents)) 
+
 p <- df %>%
   group_by(org) %>%
-  summarize(rollover=mean(totalrollover)) %>%
-  ggplot(aes(org,rollover)) +
-  geom_bar(stat="identity",show.legend=F,fill="#800000") +
-  labs(title="   Total Rollover/External Funds by\n   Organization, Fall 2024")
-  
-style(p,2000)
+  summarize(total=mean(totalreceived)) %>%
+  ggplot() +
+  geom_bar(aes(org,total/100),stat="identity",show.legend=F,fill="#800000") +
+  geom_segment(aes(x = org, xend = org, y = 0, yend = nevents$total)) +
+  geom_point(aes(org,nevents$total)) +
+  labs(
+    title="   Allocations (in $100s) Compared to\n  Number of Events Planned by Organization,\n  Fall 2024",
+    subtitle="   Points represent number of events"
+  )
+
+style(p,dollars=F) +
+  scale_y_continuous(breaks=seq(0,20,2))
 ```
 
 ## Planned Spending by Event Type
