--- a/transparency-2024.Rmd
+++ b/transparency-2024.Rmd
@@ -119,7 +119,7 @@ As we note in a later section, additional criteria and more quantified criteria 
 
 The minimum amount received by any HSO was \$`r min(summarize(group_by(df,org),totalreceived)["totalreceived"],na.rm=T)` and the maximum was \$`r max(summarize(group_by(df,org),totalreceived)["totalreceived"],na.rm=T)`.
 
-```{r, fig.height = 6}
+```{r, fig.height = 6.5}
 p <- df %>%
   group_by(org) %>%
   summarize(total=mean(totalreceived)) %>%
@@ -127,7 +127,8 @@ p <- df %>%
   geom_bar(stat="identity",show.legend=F,fill="#800000") +
   labs(
     title="   Allocations by Organization, Fall 2024",
-    subtitle="   Dotted line represents average allocation"
+    subtitle="   Dotted line represents average allocation",
+    caption="Note: BePP did not submit a budget request"
   ) +
   geom_hline(
     yintercept=mean(summarize(group_by(df,org),m=mean(totalreceived,na.rm=T))[["m"]],na.rm=T),
